# verset

./: .gitignore  LICENSE  Makefile  README.md  mkDocs.sh  stack.yaml  verset.cabal
.github/workflows/: haskell-ci.yml
src/: Verset.hs
src/Verset/: Conv.hs
