cabal-version:       3.0
name:                verset
version:             0.0.1.2
synopsis:            Small alternative prelude
description:         Small Haskell alternative prelude. Based on Protolude and Intro
homepage:            https://github.com/andrevdm/verset#readme
license:             MIT
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2021 Author name here
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC==8.10.7, GHC==9.0.1, GHC==9.2.1

common common-options
  build-depends:
    base >=4.9 && <5
  default-language:
    Haskell2010


common common-ghc-options-ide
  ghc-options: -fwrite-ide-info -hiedir=.hie

common common-ghc-options
  ghc-options: -Wall -Wimplicit-prelude -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wpartial-fields -fhide-source-paths -freverse-errors


library
  import:                 common-options
  import:                 common-ghc-options

  if impl(ghc >= 8.8.1)
    import:                common-ghc-options-ide

  hs-source-dirs:      src
  exposed-modules:     Verset.Conv
                     , Verset
  build-depends:
                     , bytestring       >= 0.10.10 && < 0.12
                     , containers       >= 0.6.0 && < 0.7
                     , extra            >= 1.7.9 && < 1.8
                     , mtl              >= 2.2.2 && < 2.3
                     , safe             >= 0.3.19 && < 0.4
                     , text             >= 1.2.4 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/verset
