cabal-version:       2.2
name:                verset
version:             0.0.1.10
synopsis:            Small alternative prelude
description:         Small Haskell alternative prelude. Based on Protolude and Intro
homepage:            https://github.com/andrevdm/verset#readme
license:             MIT
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2021-2025 Andre Van Der Merwe
category:            Prelude
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC==8.10.7, GHC==9.2.5, GHC==9.4.4, GHC==9.6.1, GHC==9.8.2

library
  ghc-options: -Wall -Wimplicit-prelude -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wpartial-fields -fhide-source-paths -freverse-errors -fwrite-ide-info -hiedir=.hie

  build-depends: base >=4.9 && <5
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Verset.Conv
                     , Verset
  build-depends:
                       bytestring       >= 0.11.3 && < 0.13
                     , containers       >= 0.6.5 && < 0.9
                     , extra            >= 1.7.12 && < 1.9
                     , mtl              >= 2.2.2 && < 2.4
                     , safe             >= 0.3.19 && < 0.4
                     , stm              >= 2.5.3.0 && < 2.6.0.0
                     , text             >= 1.2.5 && < 2.2
                     , time             >= 1.11.1 && < 1.15
                     , uuid             >= 1.3.15 && < 1.4

source-repository head
  type:     git
  location: https://github.com/andrevdm/verset
